# nixdeploy

./: LICENSE  README.md  default.nix  dependencies.nix  nixdeploy.cabal  pkgs.nix  shell.nix  stack.yaml
app/: Main.hs
data/: get-derivs.nix
examples/: pkgs.nix
examples/multiple/: README.md  deploy.nix  deploy_aws_example.sh
examples/single/: README.md  deploy.nix  deploy_aws_example.sh
nixdeps/: shelly.nix
src/: Main.hs
src/Deployment/: Nix.hs
src/Deployment/Nix/: Aeson.hs  Config.hs  Task.hs
src/Deployment/Nix/Task/: Common.hs
