name:                nixdeploy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/nixdeploy#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nixdeploy
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , optparse-applicative  >= 0.13     && < 0.15
    , shelly                >= 1.6      && < 1.7
