name:                nixdeploy
version:             0.1.0.0
synopsis:            Ansible like EDSL for deployment of nix closures to remote hosts
-- description:
homepage:            https://github.com/ncrashed/nixdeploy#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Hexresearch
category:            Deployment
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Deployment.Nix
    Deployment.Nix.Aeson
    Deployment.Nix.Config
    Deployment.Nix.Task
    Deployment.Nix.Task.Common
  default-language: Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , aeson                 >= 0.11     && < 1.3
    , ansi-terminal         >= 0.6      && < 0.7
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , directory             >= 1.3      && < 1.4
    , exceptions            >= 0.8      && < 0.9
    , file-embed            >= 0.0      && < 0.1
    , filepath              >= 1.4      && < 1.5
    , filepath              >= 1.4      && < 1.5
    , optparse-applicative  >= 0.13     && < 0.14
    , safe                  >= 0.3      && < 0.4
    , shelly                >= 1.5      && < 1.7
    , system-filepath       >= 0.4      && < 0.5
    , text                  >= 1.2      && < 1.3
    , transient             >= 0.5      && < 0.6
    , transient-universe    >= 0.4      && < 0.5
    , uniplate              >= 1.6      && < 1.7
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections

executable nixdeploy
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , nixdeploy
    , optparse-applicative  >= 0.13     && < 0.15
    , text                  >= 1.2      && < 1.3
    , transient             >= 0.5      && < 0.6
    , transient-universe    >= 0.4      && < 0.5
    , shelly                >= 1.5      && < 1.7
  default-extensions:
    GADTs
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
